# retailai-churn-intelligence

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  Dockerfile.streamlit  README.md  alembic.ini  docker-compose.streamlit.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
app/: config.py  database.py  main.py  streamlit_app.py
app/models/: customer.py
app/routers/: customers.py  health.py  predictions.py
app/schemas/: customer.py  prediction.py
app/services/: explainer.py  predictor.py
data/: generate.py  model_results.json
data/processed/: customers_clean.csv
data/raw/: customers.csv
migrations/: env.py
ml/: evaluate.py  features.py  train.py
models/: baseline.pkl  best_params.json  lgbm_churn.pkl  production_model.pkl  tuned_model.pkl  xgb_churn.pkl
notebooks/: 01_EDA.py
notebooks/.ipynb_checkpoints/: 01_EDA-checkpoint.ipynb
src/data/: cleaner.py  loader.py  quality.py
src/features/: engineering.py  run_features.py
src/models/: baseline.py  compare.py  run_training.py  train.py  tuning.py
tests/: conftest.py  test_api.py  test_data_quality.py  test_features.py  test_ml.py  test_model.py
