[project]
name = "retailai-churn-intelligence"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "faker>=25.2.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py312"]
